feat. oppgrader til spring 3.5.9